Day 4: Trained Random Forest model and compared performance to logistic regression

--- a/notebooks/02_baseline_logistic_regression.ipynb
+++ b/notebooks/02_baseline_logistic_regression.ipynb
@@ -372,7 +372,7 @@
    "metadata": {},
    "source": [
     "# Build the Baseline Logistic Regression Model  \n",
-    "scaler: transform the features (better convergence, fair weighting)  \n",
+    "* scaler: transform the features (better convergence, fair weighting)  \n",
     "* transforms each feature to:\n",
     "    * mean = 0\n",
     "    * standard deviation = 1\n",
