--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "\n",
     "\n",
-    "<mark>add a description here bu note this is supervised training because we are using a target column and features to predict outcome</mark>"
+    "<mark>This is supervised training because we are using a target column and features to predict outcome</mark>"
    ]
   },
   {
